test/cli/scenarios_to_cli/samples/more/restrict_ingress_classes/kyverno-test.yaml
name: restrict-ingress-classes
policies:
  - policy.yaml
resources:
  - resource.yaml
results:
  - policy: restrict-ingress-classes
    rule: validate-ingress
    resource: test-ingress
    kind: Ingress
    result: pass
